# proposal-reviewer

./: README.md  pyproject.toml
demo_review/schemas/: review_request_v1.schema.json  review_result_v1.schema.json
demo_review/state/: workspace.json
proposal_reviewer/: cli.py
proposal_reviewer/core/: __init__.py  importer.py  project_init.py  project_layout.py  review_request.py  review_result.py  store.py  templates.py  ui_server.py  utils.py  validator.py
tests/: test_cli.py
