[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proposal-reviewer"
version = "0.1.0"
description = "Standalone proposal review app for Custom GPT based evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.18.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["proposal_reviewer*"]
